# Todo

./: README.md  in.bat
app/: build.gradle
app/release/: Todo.apk  app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/assets/: jd.js
app/src/main/cpp/: CMakeLists.txt  baidu.c  baidu.h  google.c  google.h  https.c  log.h  macros.h  native-lib.c  picohttpparser.c  utils.h  utils_httpc.c  utils_httpc.h  utils_string.c  utils_string.h  utils_url.c  utils_url.h  youdao.c  youdao.h
app/src/main/cpp/https/: HAL_TLS_mbedtls.c  config.c  config.h  network_at_tcp.c  network_interface.c  network_interface.h  network_socket.c  network_tls.c  utils_httpc.c  utils_httpc.h  utils_timer.c  utils_timer.h
app/src/main/cpp/libssh2/: CMakeLists.txt
app/src/main/cpp/mbedtls/: CMakeLists.txt
app/src/main/java/euphoria/psycho/: Browsers.java
app/src/main/java/euphoria/psycho/common/: Activities.java  Apps.java  Clipboards.java  Collections.java  Contexts.java  Crashs.java  CustomEditText.java  Dialogs.java  Dictionaries.java  EditTexts.java  Files.java  Intents.java  Interfaces.java  Keys.java  Logs.java  Markdowns.java  Maths.java  Strings.java  Threads.java  Tuple.java  Utils.java  Views.java
app/src/main/java/euphoria/psycho/todo/: 1.html  CalculatorActivity.java  CommonActivity.java  Database.java  DictionaryService.java  DictionaryWindow.java  EditActivity.java  EditUtils.java  MainActivity.java  NativeUtils.java  Note.java  SSHActivity.java  SettingsActivity.java  SettingsFragment.java  ViewActivity.java
app/src/main/res/layout/: activity_calculator.xml  activity_edit.xml  activity_main.xml  activity_ssh.xml  activity_view.xml  dialog_find.xml
app/src/main/res/menu/: ssh.xml
app/src/main/res/values/: colors.xml  styles.xml
